PLA-1088 Balance history (#41)
* Temporary balance endpoint
* Wire up route
* Cumulative sum
